--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ a {
   --color-primary-content: #ffffff;
 
   --color-secondary-surface: #1c2733;
-  --color-secondary-content: #00b3a9;
+  --color-secondary-content: #077b74;
 
   --color-variant-one: #49c2bd;
   --color-variant-two: #0177bf;
@@ -58,7 +58,7 @@ a {
   --color-primary-content: #121c25;
 
   --color-secondary-surface: #1c2733;
-  --color-secondary-content: #00b4a8;
+  --color-secondary-content: #0c4c4f;
 
   --color-variant-one: #49c2bd;
   --color-variant-two: #0177bf;
