--- a/src/index.css
+++ b/src/index.css
@@ -24,14 +24,14 @@ a {
 }
 
 .dark {
-  --color-primary-surface: #121c25;
-  --color-primary-content: #ffffff;
+  --color-primary-surface: #282a37;
+  --color-primary-content: #9a9da6;
 
   --color-secondary-surface: #1c2733;
-  --color-secondary-content: #077b74;
+  --color-secondary-content: #975d9c;
 
-  --color-variant-one: #49c2bd;
-  --color-variant-two: #0177bf;
+  --color-variant-one: #f35399;
+  --color-variant-two: #975d9c;
 
   --error: #cf6679;
   --on-error: #32191e;
@@ -54,14 +54,14 @@ a {
 }
 
 .light {
-  --color-primary-surface: #ffffff;
-  --color-primary-content: #121c25;
+  --color-primary-surface: #f5f7ff;
+  --color-primary-content: #151513;
 
-  --color-secondary-surface: #1c2733;
-  --color-secondary-content: #0c4c4f;
+  --color-secondary-surface: #e9e5e4;
+  --color-secondary-content: #843184;
 
-  --color-variant-one: #49c2bd;
-  --color-variant-two: #0177bf;
+  --color-variant-one: #3b1583;
+  --color-variant-two: #1d0e73;
 
   --error: #b00020;
   --on-error: #f0d7d9;
