dark/light mode

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ a {
 
 .dark {
   --color-primary-surface: #282a37;
-  --color-primary-content: #9a9da6;
+  --color-primary-content: #e6e6e9;
 
   --color-secondary-surface: #1c2733;
   --color-secondary-content: #975d9c;
