--- a/src/index.css
+++ b/src/index.css
@@ -60,8 +60,8 @@ a {
   --color-secondary-surface: #e9e5e4;
   --color-secondary-content: #843184;
 
-  --color-variant-one: #3b1583;
-  --color-variant-two: #1d0e73;
+  --color-variant-one: #f35399;
+  --color-variant-two: #975d9c;
 
   --error: #b00020;
   --on-error: #f0d7d9;
