--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ a {
   --color-primary-content: #e6e6e9;
 
   --color-secondary-surface: #1c2733;
-  --color-secondary-content: #975d9c;
+  --color-secondary-content: #e19ce7;
 
   --color-variant-one: #f35399;
   --color-variant-two: #975d9c;
