--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 html,
 body {
-  font-family: 'Source Code Pro', monospace;
+  font-family: 'Inter', sans-serif;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -24,11 +24,11 @@ a {
 }
 
 .dark {
-  --color-primary-surface: #282a37;
+  --color-primary-surface: #000000;
   --color-primary-content: #e6e6e9;
 
   --color-secondary-surface: #1c2733;
-  --color-secondary-content: #e19ce7;
+  --color-secondary-content: #f35399;
 
   --color-variant-one: #f35399;
   --color-variant-two: #975d9c;
@@ -42,7 +42,7 @@ a {
   --color-gray: rgba(255, 255, 255, 0.6);
   --color-gray-border: rgb(84 90 102 / 61%);
 
-  --color-icon: #6e7681;
+  --color-icon: #f35398;
 
   --color-input: rgba(255, 255, 255, 0.6);
   --color-input-surface: #353b41;
@@ -59,11 +59,11 @@ a {
 }
 
 .light {
-  --color-primary-surface: #f5f7ff;
+  --color-primary-surface: #e7e7e778;
   --color-primary-content: #151513;
 
   --color-secondary-surface: #e9e5e4;
-  --color-secondary-content: #843184;
+  --color-secondary-content: #f35399;
 
   --color-variant-one: #f35399;
   --color-variant-two: #975d9c;
@@ -77,7 +77,7 @@ a {
   --color-gray: #6c6868;
   --color-gray-border: #cccdd3ed;
 
-  --color-icon: #151513;
+  --color-icon: #f35398;
 
   --color-input: #160041;
   --color-input-surface: #fffbfe;
