--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,9 @@ a {
   --color-primary-content: #e6e6e9;
 
   --color-secondary-surface: #1c2733;
-  --color-secondary-content: #f35399;
+  --color-secondary-content: #64B6AC;
 
-  --color-variant-one: #f35399;
+  --color-variant-one: #64B6AC;
   --color-variant-two: #975d9c;
 
   --error: #cf6679;
@@ -42,7 +42,7 @@ a {
   --color-gray: rgba(255, 255, 255, 0.6);
   --color-gray-border: rgb(84 90 102 / 61%);
 
-  --color-icon: #f35398;
+  --color-icon: #64B6AC;
 
   --color-input: rgba(255, 255, 255, 0.6);
   --color-input-surface: #353b41;
@@ -63,9 +63,9 @@ a {
   --color-primary-content: #151513;
 
   --color-secondary-surface: #e9e5e4;
-  --color-secondary-content: #f35399;
+  --color-secondary-content: #297a70;
 
-  --color-variant-one: #f35399;
+  --color-variant-one: #64B6AC;
   --color-variant-two: #975d9c;
 
   --error: #b00020;
@@ -77,7 +77,7 @@ a {
   --color-gray: #6c6868;
   --color-gray-border: #cccdd3ed;
 
-  --color-icon: #f35398;
+  --color-icon: #297a70;
 
   --color-input: #160041;
   --color-input-surface: #fffbfe;
